# diffusion-limited-aggregation

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh
include/: DrawableParticle.h  Simulation.h  config.h  particle.h
src/: DLA.cpp  DrawableParticle.cpp  particle.cpp  simulation.cpp
test/: example.cpp  hello-world  hello-world.cpp  renderer.cpp  test.txt
